# aoc22

./: README.md
1/: main2.go
1/cpp/: CMakeLists.txt  PartOne  PartTwo
1/cpp/lib/: ParseData.cpp  ParseData.h
1/cpp/src/: part_one.cpp  part_two.cpp
1/go/: main.go
2/: CMakeLists.txt  notes.txt
2/lib/: RPS.cpp  RPS.h
2/src/: PartOne.cpp  PartTwo.cpp
